opam-version: "2.0"
name: "ppx_timer"
version: "0.2"
maintainer: "skcho <csk1103@hotmail.com>"
author: "skcho <csk1103@hotmail.com>"
homepage: "https://github.com/skcho/ppx_timer"
bug-reports: "https://github.com/skcho/ppx_timer/issues"
license: "Unlicense"
dev-repo: "git+https://github.com/skcho/ppx_timer.git"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {build}
  "timer"
  "ppxlib"
]
descr: "Ppx for timer"
